--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 name: Excillion_Game_Engine
 main: me.exerosis.game.engine.Main
 version: 9.0.0
+depend: [P-3058_Pipeline_Accelerator]
 commands:
     game:
     kits:
